# local-notebook-mcp-server

./: LICENSE  MCP_SERVER_SETUP_SUMMARY.md  README.md  __init__.py  cell_operations.py  claude_desktop_config.json  export_operations.py  file_operations.py  hello3.ipynb  hello_backup_20250526_204204.ipynb  kernel_manager.py  llms-install.md  local_notebook_mcp_server.py  notebook_utils.py  pyproject.toml  requirements.txt  setup.py  test_analysis_backup_20250526_204334.ipynb  test_async_backup_20250526_204334.ipynb  test_async_backup_20250526_204346.ipynb  test_cells_backup_20250526_204334.ipynb  test_comprehensive.py  test_empty_backup_20250526_204334.ipynb  test_export_backup_20250526_204334.ipynb  test_invalid_backup_20250526_204334.ipynb  test_large_backup_20250526_204334.ipynb  test_server.py  workflow_operations.py
examples/: hello.ipynb
local_notebook_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
